Fix respawn jitter and burn after respawn

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
         <div class="modal-content death-modal">
             <h2>💀 You Died!</h2>
             <p>Respawning in <span id="respawnTimer">3</span> seconds...</p>
+            <p class="respawn-note">You'll respawn at a random location with 2 seconds of protection!</p>
         </div>
     </div>
 
