Fix leaderboard not showing issue

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <div id="leaderboardModal" class="modal">
         <div class="modal-content">
             <h2>🏆 Leaderboard</h2>
-            <div id="leaderboardList"></div>
+            <div id="leaderboardContent"></div>
             <p class="modal-close-hint">Press ESC to close</p>
         </div>
     </div>
