--- a/public/index.html
+++ b/public/index.html
@@ -54,12 +54,12 @@
     <div id="leaderboardModal" class="modal">
         <div class="modal-content">
             <h2>🏆 Leaderboard</h2>
-            <div id="leaderboardList"></div>
+            <div id="leaderboardContent"></div>
             <p class="modal-close-hint">Press ESC to close</p>
         </div>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="game.js"></script>
+    <script type="module" src="js/game.js"></script>
 </body>
 </html>
