Fix active effect placement

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             <div id="healthTooltip" class="custom-tooltip"></div>
             <div id="manaTooltip" class="custom-tooltip"></div>
             
-            <!-- Active Effects Display --> -->
+            <!-- Active Effects Display -->
             <div id="activeEffects"></div>
             
             <div id="minimap">
