--- a/public/index.html
+++ b/public/index.html
@@ -87,10 +87,16 @@
     <script type="module" src="js/game.js"></script>
 
     <!-- FPS Monitor -->
-    <div id="fpsMonitor" style="position: fixed; bottom: 10px; right: 10px; background: rgba(0,0,0,0.7); color: white; padding: 8px 12px; font-family: monospace; font-size: 14px; border-radius: 5px; z-index: 1000;">
-        <div id="clientFps" style="color: #00ff00;">Client: -- FPS</div>
-        <div id="serverTps" style="color: #ffaa00;">Server: -- TPS</div>
-        <div id="frameTime" style="color: #ff6600; font-size: 10px;">Frame: --ms</div>
+    <div id="fpsMonitor" style="position: fixed; bottom: 10px; right: 10px; background: rgba(0,0,0,0.7); color: white; padding: 8px 12px; font-family: monospace; font-size: 14px; border-radius: 5px; z-index: 1000; width: 120px;">
+        <div id="clientFps" style="color: #00ff00; font-size: 12px; display: flex; justify-content: space-between; width: 100%;">
+            <span>Client:</span> <span>NA FPS</span>
+        </div>
+        <div id="serverTps" style="color: #ffaa00; font-size: 12px; display: flex; justify-content: space-between; width: 100%;">
+            <span>Server:</span> <span>NA TPS</span>
+        </div>
+        <div id="frameTime" style="color: #ff6600; font-size: 12px; display: flex; justify-content: space-between; width: 100%;">
+            <span>Frame:</span> <span>NA ms</span>
+        </div>
     </div>
 </body>
 </html>
