Fix FPS not rendering; new fix for lag

--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
         <div id="clientFps" style="color: #00ff00; font-size: 12px; display: flex; justify-content: space-between; width: 100%;">
             <span>Client:</span> <span>0 FPS</span>
         </div>
-        <div id="serverFps" style="color: #00aaff; font-size: 12px; display: flex; justify-content: space-between; width: 100%;">
+        <div id="serverTps" style="color: #00aaff; font-size: 12px; display: flex; justify-content: space-between; width: 100%;">
             <span>Server:</span> <span>NA TPS</span>
         </div>
         <div id="frameTime" style="color: #ffaa00; font-size: 12px; display: flex; justify-content: space-between; width: 100%;">
