--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,7 @@
 <body>
     <div id="gameContainer">
         <h1>🧙‍♂️ Cast Arena</h1>
-        <div id="gameInfo">
-            <span id="playerCount">Players Online: 0</span>
-        </div>
+
         <div id="gameArea">
             <canvas id="gameCanvas"></canvas>
             
@@ -46,6 +44,7 @@
             <div id="minimap">
                 <canvas id="minimapCanvas" width="120" height="90"></canvas>
                 <div id="minimapTitle">Minimap</div>
+                <div id="playerCount">Players: 0</div>
             </div>
         </div>
         
